<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context=".MainActivity"
        android:background="#ffffffff">

        <ScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/scrollView" >

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_width="180dp"
                        android:layout_height="226dp"
                        android:src="@drawable/angel2"
                        android:contentDescription="@string/picture" />

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/artistName"
                            android:textSize="40sp"
                            android:gravity="center"
                            android:id="@+id/textView"
                            android:textStyle="bold"
                            android:paddingLeft="10dp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/occupation"
                            android:textSize="23sp"
                            android:gravity="center"
                            android:id="@+id/textView3"
                            android:textStyle="bold"
                            android:paddingLeft="10dp" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/site"
                        android:textSize="25sp"
                        android:gravity="center"
                        android:id="@+id/textView2" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/website"
                        android:autoLink="web"
                        android:textSize="25sp"
                        android:gravity="center"
                        android:id="@+id/textView4"
                        android:linksClickable="true"
                        android:longClickable="true" />
                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Tel:"
                        android:textSize="25sp"
                        android:gravity="center"
                        android:id="@+id/textView7"
                        android:layout_centerHorizontal="true" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="0788312390"
                        android:autoLink="phone"
                        android:textSize="27sp"
                        android:gravity="center"
                        android:id="@+id/textView8"
                        android:layout_below="@+id/textView"
                        android:layout_centerHorizontal="true"
                        android:phoneNumber="false"
                        android:textIsSelectable="false"
                        android:linksClickable="false"
                        android:inputType="phone"
                        android:enabled="true"
                        android:clickable="false" />
                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Email: "
                        android:textSize="25sp"
                        android:gravity="center"
                        android:id="@+id/textView5"
                        android:layout_below="@+id/textView"
                        android:layout_centerHorizontal="true" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="info@angelmutoni.com"
                        android:autoLink="email"
                        android:textSize="22sp"
                        android:gravity="center"
                        android:id="@+id/textView6"
                        android:layout_below="@+id/textView"
                        android:layout_centerHorizontal="true"
                        android:linksClickable="true"
                        android:clickable="true" />
                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Likes: "
                        android:textSize="25sp"
                        android:gravity="center"
                        android:id="@+id/textView9"
                        android:layout_below="@+id/textView"
                        android:layout_centerHorizontal="true" />

                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Poetry, hiphop, dancing"
                        android:textSize="27sp"
                        android:gravity="center"
                        android:id="@+id/textView10"
                        android:textStyle="bold"
                        android:layout_below="@+id/textView"
                        android:layout_centerHorizontal="true" />
                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Dislikes: "
                        android:textSize="25sp"
                        android:gravity="center"
                        android:id="@+id/textView11"
                        android:layout_below="@+id/textView"
                        android:layout_centerHorizontal="true" />
                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Ngwiki?, ibaze nawe"
                        android:textSize="27sp"
                        android:gravity="center"
                        android:id="@+id/textView12"
                        android:textStyle="bold"
                        android:layout_below="@+id/textView"
                        android:layout_centerHorizontal="true" />
                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="DOB: "
                        android:textSize="25sp"
                        android:gravity="center"
                        android:id="@+id/textView13"
                        android:layout_below="@+id/textView"
                        android:layout_centerHorizontal="true" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="09/04/1993"
                        android:textSize="30sp"
                        android:gravity="center"
                        android:id="@+id/textView14"
                        android:textStyle="bold"
                        android:layout_below="@+id/textView"
                        android:layout_centerHorizontal="true"
                        android:linksClickable="true"
                        android:longClickable="true" />
                </LinearLayout>

            </LinearLayout>
        </ScrollView>

    </RelativeLayout>

    <!-- Side navigation drawer UI -->
    <ListView
        android:id="@+id/navList"
        android:layout_width="200dp"
        android:layout_height="match_parent"
        android:layout_gravity="left|start"
        android:background="#ffeeeeee"/>

</android.support.v4.widget.DrawerLayout>